# A1

./: .env.example  .env.local.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MARKETING_CALENDAR.md  README.md  SECURITY.md  SPONSORS.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.sh  subscription.js  tailwind.config.ts  vercel.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql-analysis.yml  dependency-review.yml  deploy.yml
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/dashboard/: page.tsx
components/: MoodDetector.tsx  Navigation.tsx  SongWriter.tsx
docs/: DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  ENVIRONMENT_SETUP.md  ENV_SETUP.md  GET_API_KEYS.md  QUICK_START.md
lib/: auth.ts  moods.ts  openai.ts  redis.ts
pages/: index.js
prisma/: schema.prisma  seed.ts
scripts/: env.production.template  setup.js  setup.sh
services/: __init__.py  lyrics_generator.py  music_composer.py  voice_synthesizer.py
src/: a1.js  lyricsGenerator.js  moodDetector.js  moodLibrary.js  musicRecommender.js  songRecommender.js
templates/: index.html
tests/: __init__.py  a1.test.js  lyricsGenerator.test.js  moodDetector.test.js  moodLibrary.test.js  musicRecommender.test.js  songRecommender.test.js  test_app.py  test_lyrics_generator.py  test_mood_detector.py  test_music_composer.py  test_song_builder.py  test_voice_synthesizer.py
types/: index.ts
(+43 files in other folders)
